@@ -65,8 +65,10 @@
 #include <Rmath.h>
 #include <Rcpp/sugar/undoRmath.h>
 
+#ifndef RCPP_NO_SUGAR
 #include <Rcpp/sugar/sugar.h>
 #include <Rcpp/stats/stats.h>
+#endif
 
 // wrappers for R API 'scalar' functions
 #include <Rcpp/Rmath.h>
