@@ -1,3 +1,10 @@
+2012-12-06 Romain Francois <romain@r-enthusiasts.com>
+
+        * include/Rcpp/api/meat/Environment.h: meat for Environment
+        * src/exceptions.cpp: include config so that it knows that Rcpp can 
+        demangle
+        * unitTests/runit.environments.R: using sourceCpp
+
 2012-12-05 Romain Francois <romain@r-enthusiasts.com>
 
         * src/cache.cpp: added get_cache
